--- a/slides/resbaz-good-practice-slides.html
+++ b/slides/resbaz-good-practice-slides.html
@@ -363,9 +363,9 @@ Project Organization
 
 </ol>
 
-</article></slide><slide class="segue dark nobackground level1"><hgroup class = 'auto-fadein'><h2>Even if you are not working as part of a team…<BR><BR><BR></h2></hgroup><article  id="even-if-you-are-not-working-as-part-of-a-team">
+</article></slide><slide class="segue dark nobackground level1"><hgroup class = 'auto-fadein'><h2>Even if you are not working<BR>as part of a team…<BR><BR><BR></h2></hgroup><article  id="even-if-you-are-not-workingas-part-of-a-team">
 
-</article></slide><slide class="segue dark nobackground level1"><hgroup class = 'auto-fadein'><h2>Even if you are not working as part of a team…<BR><BR>…YOU ARE!!</h2></hgroup><article  id="even-if-you-are-not-working-as-part-of-a-teamyou-are">
+</article></slide><slide class="segue dark nobackground level1"><hgroup class = 'auto-fadein'><h2>Even if you are not working<BR> as part of a team…<BR><BR>…YOU ARE!!</h2></hgroup><article  id="even-if-you-are-not-working-as-part-of-a-teamyou-are">
 
 </article></slide><slide class=""><hgroup><h2>Collaboration</h2></hgroup><article  id="collaboration">
 
